Thu Mar 27 11:58:55 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): check shdr[i].sh_type because even if
	  .symtab section exists, the section's type can be SHT_NOBITS and
	  actual data doesn't exist in the file.
	  revert r45441.

Wed Mar 26 14:57:35 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y: inline must be static (for mswin).
	  fixed build error introduced at r45426.

Wed Mar 26 14:33:00 2014  Narihiro Nakamura  <authornari@gmail.com>

	* internal.h (USE_SYMBOL_GC): enable Symbol GC by default (USE_SYMBOL_GC == 1).

Tue Mar 25 22:57:11 2014  Narihiro Nakamura  <authornari@gmail.com>

	* parse.y: support Symbol GC. [ruby-trunk Feature #9634]
	  See this ticket about Symbol GC.

	* include/ruby/ruby.h:
	  Declare few functions.
	  * rb_sym2id: almost same as old SYM2ID but support dynamic symbols.
	  * rb_id2sym: almost same as old ID2SYM but support dynamic symbols.
	  * rb_sym2str: almost same as `rb_id2str(SYM2ID(sym))` but not
	    pin down a dynamic symbol.
	  Declare a new struct.
	  * struct RSymbol: represents a dynamic symbol as object in
	    Ruby's heaps.
	  Add few macros.
	  * STATIC_SYM_P: check a static symbol.
	  * DYNAMIC_SYM_P: check a dynamic symbol.
	  * RSYMBOL: cast to RSymbol

	* gc.c: declare RSymbol. support T_SYMBOL.

	* internal.h: Declare few functions.
	  * rb_gc_free_dsymbol: free up a dynamic symbol. GC call this
	    function at a sweep phase.
	  * rb_str_dynamic_intern: convert a string to a dynamic symbol.
	  * rb_check_id_without_pindown: not pinning function.
	  * rb_sym2id_without_pindown: ditto.
	  * rb_check_id_cstr_without_pindown: ditto.

	* string.c (Init_String): String#intern and String#to_sym use
	  rb_str_dynamic_intern.

	* template/id.h.tmpl: use LSB of ID as a flag for determining a
	  static symbol, so we shift left other ruby_id_types.

	* string.c: use rb_sym2str instead `rb_id2str(SYM2ID(sym))` to
	  avoid pinning.
